--- a/base_di_partenza/articolo.html
+++ b/base_di_partenza/articolo.html
@@ -34,10 +34,11 @@
 
     <main>
         <article class="clearfix">
-            <h1>Come creare un template per i post </h1>
+            <h1>Come creare un <br> <span class="u">template per i post</span></h1>
+
             <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il
                     25-10-2020</span></p>
-            <img src="./assets/img/badge.png" class="imgLeft" alt="logo Html5" width="70" height="70">
+            <!-- <img src="./assets/img/badge.png" class="imgLeft" alt="logo Html5" width="70" height="70"> -->
             <p> La prima cosa
                 da
                 fare è suddividere in blocchi logici la pagina, identificando le <strong>parti comuni</strong> da
@@ -49,7 +50,7 @@
                 <li>Contenuti centrali variabili del tag <code>&lt;main&gt;</code> (corpo principale)</li>
                 <li>Contenuti di fine pagina comuni, da inserire nel tag <code>&lt;footer&gt;</code></li>
             </ul>
-
+            <a href="#top" class="toTop triangle" aria-label="Torna in cima"></a>
             <h2>Formattazione del codice</h2>
             <p>Il testo dell'articolo dovrà essere formattato per identificare tutte le parti da <strong>selezionare con
                     i CSS</strong>. Perciò i passi saranno:</p>
