--- a/base_di_partenza/articolo.html
+++ b/base_di_partenza/articolo.html
@@ -99,7 +99,9 @@
                     </tr>
                 </tbody>
             </table>
-
+            <i class="far fa-calendar"></i>
+            <i class="fas fa-plus"></i>
+            <i class="fas fa-caret-up"></i>
             <p>Un test di validazione potrà essere fatto tramite il <a href="https://jigsaw.w3.org/css-validator/"
                     target="blank" title="Validatore CSS online del W3C">tool online</a> dedicato allo scopo. Una volta
                 ottimizzato il tutto, avremo raggiunto il nostro obiettivo ed essere stati dei veri developers come
@@ -150,7 +152,6 @@
             </div>
         </aside>
     </main>
-
     <hr>
 
     <footer>
