--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
       <div>Trace Honey</div>
       <div>
         <img src="./assets/imgs/logo.png" alt="Logo"/>
-        SHOP
+        <span>SHOP</span>
       </div>
       <div>Facilities</div>
       <div>Contacts</div>
     </div>
   </header>
  
-  
+
   <main>
-    <!-- Products -->
     <section class="section">
       <h2 class="section-title">Best Selling Products</h2>
 
@@ -85,7 +84,6 @@
       </div>
     </section>
 
-    <!-- Latest news -->
     <section class="section">
       <h2 class="section-title">Latest News</h2>
 
